[gd_scene load_steps=9 format=3 uid="uid://cswcddvodhc38"]

[ext_resource type="Script" path="res://addons/editor-shaved/simple_editor.gd" id="1_4ave7"]
[ext_resource type="Theme" uid="uid://cpstbeulpubdx" path="res://addons/editor-shaved/theme.tres" id="1_uqum6"]
[ext_resource type="Texture2D" uid="uid://vc3j3m3j7y2j" path="res://icon.png" id="3_vdv8v"]
[ext_resource type="Texture2D" uid="uid://dbsjbe4d037in" path="res://assets/goal-back.png" id="4_rjaya"]
[ext_resource type="Texture2D" uid="uid://42tgw6uh0c80" path="res://assets/wall.png" id="5_jyfsx"]
[ext_resource type="Texture2D" uid="uid://dc8pqr45rf4qk" path="res://assets/flower.png" id="6_4oqsp"]
[ext_resource type="ButtonGroup" uid="uid://b2wnwfxnx8tyu" path="res://addons/editor-shaved/goal_button_group.tres" id="7_02ouu"]
[ext_resource type="ButtonGroup" uid="uid://m2srn7awcglf" path="res://addons/editor-shaved/level_type_button_group.tres" id="7_krpsp"]

[node name="SimpleEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ave7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = ExtResource("1_uqum6")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackToGodotButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Back to Godot
"

[node name="QuitButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Quit"

[node name="PlayButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 4

[node name="AddAvatarButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("3_vdv8v")
icon_alignment = 1
expand_icon = true

[node name="AddGoalButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("4_rjaya")
icon_alignment = 1
expand_icon = true

[node name="AddWallButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("5_jyfsx")
icon_alignment = 1
expand_icon = true

[node name="AddFlowerItemButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("6_4oqsp")
icon_alignment = 1
expand_icon = true

[node name="LabelSelected" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Selected: none
"

[node name="DeleteButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Delete"

[node name="AvatarGridContainer" type="GridContainer" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/AvatarGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Speed:"

[node name="AvatarSpeedEdit" type="SpinBox" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/AvatarGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -2000.0
max_value = 2000.0
page = 10.0
value = 300.0
allow_greater = true
allow_lesser = true

[node name="Label3" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/AvatarGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Jump velocity:"

[node name="AvatarJumpEdit" type="SpinBox" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/AvatarGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -2000.0
max_value = 2000.0
page = 10.0
value = 650.0
allow_greater = true
allow_lesser = true

[node name="Label2" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Level settings"

[node name="LevelGridContainer" type="GridContainer" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Gravity:"

[node name="GravityEdit" type="SpinBox" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -2000.0
max_value = 2000.0
step = 20.0
page = 120.0
value = 980.0
allow_greater = true
allow_lesser = true

[node name="Label4" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer"]
layout_mode = 2
text = "Timeout:"

[node name="TimeoutEdit" type="SpinBox" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 5.0
max_value = 180.0
step = 5.0
page = 30.0
value = 5.0

[node name="Label2" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Level type:"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopDownButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = ExtResource("7_krpsp")
text = "top-down"

[node name="PlarformerButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = ExtResource("7_krpsp")
text = "platformer"

[node name="Label3" type="Label" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Goal:"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer"]
layout_mode = 2

[node name="ReachGoalButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = ExtResource("7_02ouu")
text = "Reach goal block"

[node name="GrabFlowersButton" type="Button" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = ExtResource("7_02ouu")
text = "Grab all flowers"

[node name="CanvasContainer" type="MarginContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="HBoxContainer/CanvasContainer"]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/BackToGodotButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/GridContainer/AddAvatarButton" to="." method="_on_avatar_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/GridContainer/AddGoalButton" to="." method="_on_goal_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/GridContainer/AddWallButton" to="." method="_on_wall_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/GridContainer/AddFlowerItemButton" to="." method="_on_flower_item_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="value_changed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/AvatarGridContainer/AvatarSpeedEdit" to="." method="_on_avatar_speed_edit_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/AvatarGridContainer/AvatarJumpEdit" to="." method="_on_avatar_jump_edit_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer/GravityEdit" to="." method="_on_gravity_changed"]
[connection signal="value_changed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer/TimeoutEdit" to="." method="_on_timeout_changed"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer/VBoxContainer/TopDownButton" to="." method="_on_top_down_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer/VBoxContainer/PlarformerButton" to="." method="_on_plarformer_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer/VBoxContainer2/ReachGoalButton" to="." method="_on_reach_goal_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/LevelGridContainer/VBoxContainer2/GrabFlowersButton" to="." method="_on_grab_flowers_button_pressed"]
